box-shadow added for gridster boxes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="/javascripts/zime.custom.v1.js"></script>
   </head>
   <body>
-      <div class="navbar navbar-fixed-top">
+      <div id="wrap">
+        <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
               <div class="container">
                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -30,28 +31,31 @@
               </div>
             </div>
           </div>
-    <div id="component-grid">
-        <div class="gridster">
-                  <ul>
-                  <li data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
-                  <li data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
-                  <li data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
+           <div class="container">
+               <div id="component-grid">
+                   <div class="gridster">
+                         <ul>
+                             <li data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
+                             <li data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
+                             <li data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
 
-                  <li data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
-                  <li data-row="2" data-col="2" data-sizex="2" data-sizey="2"></li>
+                             <li data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
+                             <li data-row="2" data-col="2" data-sizex="2" data-sizey="2"></li>
 
-                  <li data-row="1" data-col="4" data-sizex="1" data-sizey="1"></li>
-                  <li data-row="2" data-col="4" data-sizex="2" data-sizey="1"></li>
-                  <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
+                             <li data-row="1" data-col="4" data-sizex="1" data-sizey="1"></li>
+                             <li data-row="2" data-col="4" data-sizex="2" data-sizey="1"></li>
+                             <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
 
-                  <li data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
-                  <li data-row="3" data-col="5" data-sizex="1" data-sizey="1"></li>
+                             <li data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
+                             <li data-row="3" data-col="5" data-sizex="1" data-sizey="1"></li>
 
-                  <li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
-                  <li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
-                  </ul>
-            </div>
-    </div>
-      <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
+                             <li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
+                             <li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
+                         </ul>
+                   </div>
+               </div>
+           </div>
+      </div>
+    <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
   </body>
 </html>
