--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,1 +1,32 @@
 #component-grid { margin-top: 50px;}
+#wrap {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    /* Negative indent footer by it's height */
+    margin: 0 auto -60px;
+}
+
+/* Set the fixed height of the footer here */
+#push,
+#footer {
+    height: 60px;
+}
+#footer {
+    background-color: #f5f5f5;
+}
+
+/* Lastly, apply responsive CSS fixes as necessary */
+@media (max-width: 767px) {
+    #footer {
+        margin-left: -20px;
+        margin-right: -20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+.gridster ul li:hover {
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 2px 20px 1px #DEDEDE;
+}
