--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,61 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/jquery.gridster.min.css' />
-    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-    <link rel='stylesheet' href='/stylesheets/bootstrap-responsive.min.css' />
-    <link rel='stylesheet' href='/stylesheets/custom.css' />
-    <script type="text/javascript" src="/javascripts/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="/javascripts/jquery.gridster.min.js"></script>
-    <script type="text/javascript" src="/javascripts/zime.custom.v1.js"></script>
-  </head>
-  <body>
-      <div id="wrap">
-        <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-              <div class="container">
-                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="brand" href="#">Zimetone!</a>
-                <div class="nav-collapse collapse">
-                  <ul class="nav">
-                    <li class="active"><a href="#">Dashboard</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                  </ul>
-                </div><!--/.nav-collapse -->
-              </div>
-            </div>
-          </div>
-           <div class="container">
-               <div id="component-grid">
-                   <div class="gridster">
-                         <ul>
-                             <li data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
-                             <li data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
-                             <li data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
+<% layout('layout/boilerplate') -%>
+<div class="gridster">
+     <ul>
+         <li data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
+         <li data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
+         <li data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
 
-                             <li data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
-                             <li data-row="2" data-col="2" data-sizex="2" data-sizey="2"></li>
+         <li data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
+         <li data-row="2" data-col="2" data-sizex="2" data-sizey="2"></li>
 
-                             <li data-row="1" data-col="4" data-sizex="1" data-sizey="1"></li>
-                             <li data-row="2" data-col="4" data-sizex="2" data-sizey="1"></li>
-                             <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
+         <li data-row="1" data-col="4" data-sizex="1" data-sizey="1"></li>
+         <li data-row="2" data-col="4" data-sizex="2" data-sizey="1"></li>
+         <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
 
-                             <li data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
-                             <li data-row="3" data-col="5" data-sizex="1" data-sizey="1"></li>
+         <li data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
+         <li data-row="3" data-col="5" data-sizex="1" data-sizey="1"></li>
 
-                             <li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
-                             <li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
-                         </ul>
-                   </div>
-               </div>
-           </div>
-      </div>
-    <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
-  </body>
-</html>
+         <li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
+         <li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
+     </ul>
+</div>
