--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,31 +2,26 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/jquery.gridster.min.css' />
     <script type="text/javascript" src="/javascripts/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="/javascripts/jquery.gridster.min.js"></script>
     <script type="text/javascript" src="/javascripts/zime.custom.v1.js"></script>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+
   </head>
   <body>
     <div class="gridster">
           <ul>
-          <li data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
-          <li data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
-          <li data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
+	          <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+				<h1>Chicago</h1>
+				<h2>December 25, 2009</h2>
+				<h3>4:22 P.M.</h3>
+			  </li>
+	          <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">2</li>
+			  <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">3</li>
+	          <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">4</li>
 
-          <li data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
-          <li data-row="2" data-col="2" data-sizex="2" data-sizey="2"></li>
 
-          <li data-row="1" data-col="4" data-sizex="1" data-sizey="1"></li>
-          <li data-row="2" data-col="4" data-sizex="2" data-sizey="1"></li>
-          <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
-
-          <li data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
-          <li data-row="3" data-col="5" data-sizex="1" data-sizey="1"></li>
-
-          <li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
-          <li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
           </ul>
       </div>
   </body>
